// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`player band snapshots > glow: settled frame at the Víkin web logical-screen size 1`] = `
"clearRect
fillRect (0,0,960,108)
fillRect (-464.4000000000001,-48.599999999999994,205.2,205.2)
fillRect (-21.400000000000063,-48.599999999999994,205.2,205.2)
fillRect (421.5999999999999,-48.599999999999994,205.2,205.2)
fillRect (864.5999999999999,-48.599999999999994,205.2,205.2)
save
save
image dest=(-388.80000000000007,0,54,108)
text "7" at=-285.80000000000007,54 font=700 30px "GT America"
text "Jón Jónsson" at=-199.80000000000007,54 font=700 30px "GT America"
restore
save
image dest=(54.19999999999993,0,54,108)
text "7" at=157.19999999999993,54 font=700 30px "GT America"
text "Jón Jónsson" at=243.19999999999993,54 font=700 30px "GT America"
restore
save
image dest=(497.19999999999993,0,54,108)
text "7" at=600.1999999999999,54 font=700 30px "GT America"
text "Jón Jónsson" at=686.1999999999999,54 font=700 30px "GT America"
restore
save
image dest=(940.1999999999999,0,54,108)
text "7" at=1043.1999999999998,54 font=700 30px "GT America"
text "Jón Jónsson" at=1129.1999999999998,54 font=700 30px "GT America"
restore
restore"
`;

exports[`player band snapshots > plain: settled frame at the Víkin web logical-screen size 1`] = `
"clearRect
fillRect (0,0,960,108)
save
save
image dest=(-388.80000000000007,0,54,108)
text "7" at=-285.80000000000007,54 font=700 30px "GT America"
text "Jón Jónsson" at=-199.80000000000007,54 font=700 30px "GT America"
restore
save
image dest=(54.19999999999993,0,54,108)
text "7" at=157.19999999999993,54 font=700 30px "GT America"
text "Jón Jónsson" at=243.19999999999993,54 font=700 30px "GT America"
restore
save
image dest=(497.19999999999993,0,54,108)
text "7" at=600.1999999999999,54 font=700 30px "GT America"
text "Jón Jónsson" at=686.1999999999999,54 font=700 30px "GT America"
restore
save
image dest=(940.1999999999999,0,54,108)
text "7" at=1043.1999999999998,54 font=700 30px "GT America"
text "Jón Jónsson" at=1129.1999999999998,54 font=700 30px "GT America"
restore
restore"
`;

exports[`player band snapshots > streamer: settled frame at the Víkin web logical-screen size 1`] = `
"clearRect
fillRect (0,0,960,108)
fillRect (636,18,97.2,2)
fillRect (474,54,97.2,2)
fillRect (312,90,97.2,2)
save
save
image dest=(-75.40000000000009,0,54,108)
text "7" at=27.59999999999991,54 font=700 30px "GT America"
text "Jón Jónsson" at=113.59999999999991,54 font=700 30px "GT America"
restore
save
image dest=(367.5999999999999,0,54,108)
text "7" at=470.5999999999999,54 font=700 30px "GT America"
text "Jón Jónsson" at=556.5999999999999,54 font=700 30px "GT America"
restore
save
image dest=(810.5999999999999,0,54,108)
text "7" at=913.5999999999999,54 font=700 30px "GT America"
text "Jón Jónsson" at=999.5999999999999,54 font=700 30px "GT America"
restore
restore"
`;

exports[`player band snapshots > streamer: settled frame at the stacked web logical-screen size 1`] = `
"clearRect
fillRect (0,0,3840,192)
fillRect (3264,32,172.8,4)
fillRect (2976,96,172.8,4)
fillRect (2688,160,172.8,4)
save
save
image dest=(-68.60000000000002,0,96,192)
text "10" at=113.39999999999998,96 font=700 54px "GT America"
text "Jón Jónsson" at=330.4,96 font=700 54px "GT America"
restore
save
image dest=(784.4,0,96,192)
text "10" at=966.4,96 font=700 54px "GT America"
text "Jón Jónsson" at=1183.4,96 font=700 54px "GT America"
restore
save
image dest=(1637.4,0,96,192)
text "10" at=1819.4,96 font=700 54px "GT America"
text "Jón Jónsson" at=2036.4,96 font=700 54px "GT America"
restore
save
image dest=(2490.4,0,96,192)
text "10" at=2672.4,96 font=700 54px "GT America"
text "Jón Jónsson" at=2889.4,96 font=700 54px "GT America"
restore
save
image dest=(3343.4,0,96,192)
text "10" at=3525.4,96 font=700 54px "GT America"
text "Jón Jónsson" at=3742.4,96 font=700 54px "GT America"
restore
restore"
`;

exports[`substitution band snapshots > flash: settled frame at the Víkin web logical-screen size 1`] = `
"clearRect
fillRect (0,0,960,108)
save
beginPath
rect
clip
save
save
image dest=(0,0,54,108)
text "12" at=103,54 font=700 30px "GT America"
text "Siggi Bekkur" at=225,54 font=700 30px "GT America"
restore
save
image dest=(530,0,108,108)
text "7" at=687,54 font=700 30px "GT America"
text "Jón Jónsson" at=773,54 font=700 30px "GT America"
restore
restore
restore"
`;

exports[`substitution band snapshots > lay outing is stable: the measured unit matches the drawn unit geometry 1`] = `1027`;

exports[`substitution band snapshots > relay: settled frame at the Víkin web logical-screen size 1`] = `
"clearRect
fillRect (0,0,960,108)
save
save
beginPath
rect
clip
save
save
image dest=(-388.80000000000007,0,54,108)
text "12" at=-285.80000000000007,54 font=700 30px "GT America"
text "Siggi Bekkur" at=-163.80000000000007,54 font=700 30px "GT America"
restore
save
image dest=(141.19999999999993,0,108,108)
text "7" at=298.19999999999993,54 font=700 30px "GT America"
text "Jón Jónsson" at=384.19999999999993,54 font=700 30px "GT America"
restore
restore
restore
save
beginPath
rect
clip
save
save
image dest=(638.1999999999999,0,54,108)
text "12" at=741.1999999999999,54 font=700 30px "GT America"
text "Siggi Bekkur" at=863.1999999999999,54 font=700 30px "GT America"
restore
save
image dest=(1168.1999999999998,0,108,108)
text "7" at=1325.1999999999998,54 font=700 30px "GT America"
text "Jón Jónsson" at=1411.1999999999998,54 font=700 30px "GT America"
restore
restore
restore
restore"
`;

exports[`substitution band snapshots > static: settled frame at the Víkin web logical-screen size 1`] = `
"clearRect
fillRect (0,0,960,108)
save
save
beginPath
rect
clip
save
save
image dest=(0,0,54,108)
text "12" at=103,54 font=700 30px "GT America"
text "Siggi Bekkur" at=225,54 font=700 30px "GT America"
restore
save
image dest=(530,0,108,108)
text "7" at=687,54 font=700 30px "GT America"
text "Jón Jónsson" at=773,54 font=700 30px "GT America"
restore
restore
restore
restore"
`;

exports[`substitution band snapshots > static: settled unit layout matches the measured substitution unit 1`] = `
"clearRect
fillRect (0,0,3840,192)
save
save
beginPath
rect
clip
save
save
image dest=(0,0,96,192)
text "12" at=182,96 font=700 54px "GT America"
text "Siggi Bekkur" at=399,96 font=700 54px "GT America"
restore
save
image dest=(944,0,192,192)
text "7" at=1222,96 font=700 54px "GT America"
text "Jón Jónsson" at=1374,96 font=700 54px "GT America"
restore
restore
restore
save
beginPath
rect
clip
save
save
image dest=(1828,0,96,192)
text "12" at=2010,96 font=700 54px "GT America"
text "Siggi Bekkur" at=2227,96 font=700 54px "GT America"
restore
save
image dest=(2772,0,192,192)
text "7" at=3050,96 font=700 54px "GT America"
text "Jón Jónsson" at=3202,96 font=700 54px "GT America"
restore
restore
restore
save
beginPath
rect
clip
save
save
image dest=(3656,0,96,192)
text "12" at=3838,96 font=700 54px "GT America"
text "Siggi Bekkur" at=4055,96 font=700 54px "GT America"
restore
save
image dest=(4600,0,192,192)
text "7" at=4878,96 font=700 54px "GT America"
text "Jón Jónsson" at=5030,96 font=700 54px "GT America"
restore
restore
restore
restore"
`;
